--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "db": "bunx prisma studio",
+    "email": "email dev"
   },
   "dependencies": {
     "@prisma/client": "^6.18.0",
@@ -18,7 +20,10 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-email/components": "0.5.7",
+    "@tanstack/react-query": "^5.90.5",
     "@trpc/client": "^11.6.0",
+    "@trpc/react-query": "^11.6.0",
     "@trpc/server": "^11.6.0",
     "better-auth": "^1.3.29",
     "class-variance-authority": "^0.7.1",
@@ -30,10 +35,13 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "recharts": "2.15.4",
+    "server-only": "^0.0.1",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@react-email/preview-server": "4.3.1",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -41,6 +49,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.0",
     "prisma": "^6.18.0",
+    "react-email": "4.3.1",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
