--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "next": "16.0.0",
     "next-cloudinary": "^6.16.2",
     "next-themes": "^0.4.6",
+    "radix-ui": "^1.4.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "recharts": "2.15.4",
