--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "email": "email dev"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.27.16",
     "@prisma/client": "^6.18.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -19,10 +20,12 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-email/components": "0.5.7",
     "@react-email/render": "*",
@@ -36,6 +39,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
     "input-otp": "^1.4.2",
+    "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.548.0",
     "motion": "^12.23.24",
     "next": "16.0.0",
@@ -44,6 +48,7 @@
     "radix-ui": "^1.4.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-hotkeys-hook": "^5.2.1",
     "recharts": "2.15.4",
     "resend": "^6.2.2",
     "server-only": "^0.0.1",
@@ -55,6 +60,7 @@
     "@react-email/preview-server": "4.3.1",
     "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4",
+    "@types/lodash.throttle": "^4.1.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -62,6 +68,7 @@
     "eslint-config-next": "16.0.0",
     "prisma": "^6.18.0",
     "react-email": "4.3.1",
+    "sass": "^1.93.3",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
