--- a/package.json
+++ b/package.json
@@ -29,7 +29,19 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-email/components": "0.5.7",
     "@react-email/render": "*",
+    "@tailwindcss/typography": "^0.5.19",
     "@tanstack/react-query": "^5.90.5",
+    "@tiptap/extension-bubble-menu": "^3.10.1",
+    "@tiptap/extension-code-block-lowlight": "^3.10.1",
+    "@tiptap/extension-image": "^3.10.1",
+    "@tiptap/extension-link": "^3.10.1",
+    "@tiptap/extension-placeholder": "^3.10.1",
+    "@tiptap/extension-text-align": "^3.10.1",
+    "@tiptap/extension-typography": "^3.10.1",
+    "@tiptap/extension-underline": "^3.10.1",
+    "@tiptap/react": "^3.10.1",
+    "@tiptap/starter-kit": "^3.10.1",
+    "@tiptap/suggestion": "^3.10.1",
     "@trpc/client": "^11.6.0",
     "@trpc/react-query": "^11.6.0",
     "@trpc/server": "^11.6.0",
