--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
     "input-otp": "^1.4.2",
     "lodash.throttle": "^4.1.1",
@@ -60,12 +61,14 @@
     "radix-ui": "^1.4.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-error-boundary": "^6.0.0",
     "react-hotkeys-hook": "^5.2.1",
     "recharts": "2.15.4",
     "resend": "^6.2.2",
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "use-debounce": "^10.0.6",
     "zod": "^4.1.12"
   },
   "devDependencies": {
