--- a/package.json
+++ b/package.json
@@ -45,13 +45,17 @@
     "@trpc/client": "^11.6.0",
     "@trpc/react-query": "^11.6.0",
     "@trpc/server": "^11.6.0",
+    "@types/dompurify": "^3.2.0",
+    "@types/jsdom": "^27.0.0",
     "better-auth": "^1.3.29",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.3.0",
     "framer-motion": "^12.23.24",
     "input-otp": "^1.4.2",
+    "jsdom": "^27.1.0",
     "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.548.0",
     "motion": "^12.23.24",
