--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "next": "16.0.0",
     "next-cloudinary": "^6.16.2",
     "next-themes": "^0.4.6",
+    "ogl": "^1.0.11",
     "radix-ui": "^1.4.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
