--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@floating-ui/react": "^0.27.16",
+    "@gsap/react": "^2.1.2",
     "@prisma/client": "^6.19.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -54,6 +55,7 @@
     "date-fns": "^4.1.0",
     "dompurify": "^3.3.0",
     "framer-motion": "^12.23.24",
+    "gsap": "^3.13.0",
     "input-otp": "^1.4.2",
     "jsdom": "^27.1.0",
     "lodash.throttle": "^4.1.1",
