--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "resend": "^6.2.2",
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
+    "streamdown": "^1.5.1",
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.6",
     "zod": "^4.1.12"
