--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@trpc/server": "^11.7.1",
     "@types/dompurify": "^3.2.0",
     "@types/jsdom": "^27.0.0",
-    "better-auth": "^1.3.34",
+    "better-auth": "1.4",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
