--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "ogl": "^1.0.11",
     "radix-ui": "^1.4.3",
     "react": "19.2.0",
+    "react-day-picker": "^9.11.2",
     "react-dom": "19.2.0",
     "react-error-boundary": "^6.0.0",
     "react-hotkeys-hook": "^5.2.1",
